# nanoMODBUS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  dma.c  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  md_README.html  menudata.js  modbusino.c  modbusino.h  modbusino_8h.html  modbusino_8h__incl.map  modbusino_8h__incl.md5  modbusino_8h_source.html  modbusino_platform.h  nanomodbus.c  nanomodbus.h  nanomodbus_8h.html  nanomodbus_8h__incl.dot  nanomodbus_8h__incl.map  nanomodbus_8h__incl.md5  nanomodbus_8h_source.html  pages.html  structmbsn__callbacks.html  (+13 more)
.github/workflows/: ci.yml  clang-format-check.yml  repository-traffic.yml
examples/: client-tcp.c  platform.h  server-handlers.h  server-tcp.c
examples/arduino/: README.md  compile-examples.sh
examples/arduino/client-rtu/: client-rtu.ino
examples/arduino/server-rtu/: server-rtu.ino  server-rtu_DE_RE.ino
examples/linux/: client-tcp.c  platform.h  server-tcp.c
examples/pico/: CMakeLists.txt  README.md
examples/pico/app/: nanomodbus.c  nanomodbus.h  rtu-client.c
examples/rp2040/: CMakeLists.txt  README.md  rtu-client.c
examples/stm32/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  modbus_rtu.c  modbus_tcp.c  nanomodbus_port.c  nanomodbus_port.h  nanomodbus_stm32.c  nanomodbus_stm32.h  readme.md  stm32f401ccux.ioc  stm32f401ceux.ioc  stm32f4xx_hal_conf.h  usart.c
examples/stm32/Core/Src/: main.c
examples/stm32/bsp/blackpill/: blackpill.c  blackpill.h
examples/stm32/dma_mode/: .cproject  .gitignore  .project  Makefile  README.md  stm32_dma_modbus.ioc
examples/stm32/dma_mode/Core/Inc/: main.h  nanomodbus.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
examples/stm32/dma_mode/Core/Src/: dma.c  gpio.c  main.c  nanomodbus.c  stm32f0xx_it.c  usart.c
examples/stm32/nmbs/: port.c  port.h
examples/stm32_irq/: .cproject  .gitignore  .project  Makefile  README.md  STM32F030C8Tx_FLASH.ld  stm32_irq_modbus.ioc
examples/stm32_irq/Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  usart.h
examples/stm32_irq/Core/Src/: gpio.c  main.c  stm32f0xx_it.c  tim.c  usart.c
examples/stm32_poll/: .cproject  .project  Makefile  README.md  STM32F030C8Tx_FLASH.ld  stm32_poll_modbus.ioc
examples/stm32_poll/Core/Inc/: main.h  nanomodbus.h  stm32f0xx_it.h
examples/stm32_poll/Core/Src/: gpio.c  main.c  nanomodbus.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usart.c
examples/win32/: comm.c  comm.h  modbus_cli.c
examples/win32/vs2022/: .gitignore  modbus_cli.sln  modbus_cli.vcxproj  modbus_cli.vcxproj.filters
examples/xmega128a1au/: Modbus-TCP.atsln
examples/xmega128a1au/Modbus-TCP/: Modbus-TCP.componentinfo.xml  Modbus-TCP.cproj  main.c
examples/xmega128a1au/Modbus-TCP/port/nmbs/: nmbs.h  nmbs_port.c  nmbs_port.h
examples/xmega128a1au/Modbus-TCP/port/wizchip/: wizchip.h  wizchip_port.c  wizchip_port.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
tests/: CMakeLists.txt  client_disabled.c  modbusino_tests.c  modbusino_tests.h  multi_server_rtu.c  nanomodbus_tests.c  nanomodbus_tests.h  server_disabled.c
traffic/: clones.csv  views.csv
